2001-08-03  Sam Steingold  <sds@gnu.org>

	some minor code rearrangements
	* compiler.lisp (c-error-c): new macro
	(analyze-lambdalist): added local macros CHECK-ITEM and SKIP-L,
	removed local macro ERR-SUPERFLU

2001-08-02  Sam Steingold  <sds@gnu.org>

	Fixed bug #445286
	* compiler.lisp (c-SYMBOL-MACROLET): bind *VENV* before PARSE-BODY
	because PARSE-BODY macroexpands the first form in search of
	declarations, and that macroexpansion might rely on the
	definitions of the current SYMBOL-MACROLET

2001-08-02  Bruno Haible  <haible@clisp.cons.org>

	* nls_iso8859_16.c: Regenerated from newest unicode.org table.

2001-07-25  Sam Steingold  <sds@gnu.org>

	due to the change in the WRITE signature,
	all FAS files have to be re-compiled
	* constobj.d (version): bumped

2001-07-25  Sam Steingold  <sds@gnu.org>

	Win32: understand Cygwin's /sygdrive/[letter] pathnames
	* pathname.d (parse_namestring): translate :directory (:absolute
	*device-prefix* "c" ...) to :device "C" :device (:absolute ...)
	* cfgwin32.lisp (*device-prefix*): set to "cygdrive"
	* constsym.lisp (*device-prefix*): added
	* spvw.d (*device-prefix*): defined
	* spvw_memfile.d (loadmem): check the path for "cygdrive" prefix
	and modify it if necessary in place

2001-07-25  Sam Steingold  <sds@gnu.org>

	* socket.d (create_client_socket, create_server_socket):
	 avoid warnings

2001-07-25  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (with-standard-io-syntax): bind *PRINT-LINES*

2001-07-24  Sam Steingold  <sds@gnu.org>

	mingw32 compilation - kill more warnings
	* win32.d (ULONGLONG): define to OS_ULONGLONG
	 around #include <windows.h>
	(USE_SYS_TYPES_FD_SET): define around #include <winsock.h>

2001-07-24  Sam Steingold  <sds@gnu.org>

	Tweak the MAKE-LOAD-FORM patch
	* loadform.lisp: new file; moved `make-load-form',
	`make-load-form-saving-slots' and `make-init-form' here
	* init.lisp: load "loadform"
	* makemake.in (LPARTS): added "loadform"